# hpcHelloWorld

./: LICENSE  README.md  pyproject.toml
config/: hello_to.json
containers/: env.def
data/raw/: people.json
exercises/: Exo_0.md  Exo_2.md
exercises/hpc/: Exo_1.md  Exo_2.md
exercises/structure/: Exo_1.md  Exo_2.md  Exo_3.md
scripts/: say_hello.py
src/exohw/: hello.py  utils.py
