[project]
name = "exohw"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Hello World Project"
# Relative path to the README.md file
readme = "README.md"
# Pin for an analyisis (== or ~= for patching) and minimal for a package (>=)
requires-python = "~=3.13.0"
# Relative path to the license file
license.file = "LICENSE"
# Use git tags for versioning
dynamic = ["version"]

dependencies = [
    # pin (== or ~= with patches) when developing scripts, minimal (>=) for packages
    "numpy==2.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/exohw"]

[build-system]
# Require hatch-vcs alongside hatchling to enable Git tag versioning
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Use the git version to set the version of the package
[tool.hatch.version]
source = "vcs"
